[gd_scene load_steps=34 format=3 uid="uid://d8gnmkghjw4y"]

[ext_resource type="Script" uid="uid://chi0wro6852wf" path="res://vehicle_body_3d.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bsqs54jqh5rv2" path="res://freecam.tscn" id="2"]
[ext_resource type="AudioStream" uid="uid://h2aydpeoumrq" path="res://crowd.wav" id="3"]
[ext_resource type="AudioStream" uid="uid://cw2w314pg1hqh" path="res://explode.wav" id="4"]
[ext_resource type="Texture2D" uid="uid://h0ju080swc63" path="res://explosion-Sheet.png" id="5"]
[ext_resource type="PackedScene" uid="uid://c5o432e1a5d1k" path="res://assets/sheep.glb" id="6"]
[ext_resource type="FontFile" uid="uid://dbj10iq6j0ahu" path="res://IMPACT.TTF" id="7"]
[ext_resource type="Script" uid="uid://wc00dhyn7hr2" path="res://rich_text_label_3.gd" id="8"]
[ext_resource type="FontFile" uid="uid://cvvi6o8v4r7dh" path="res://ariblk.ttf" id="9"]
[ext_resource type="Script" uid="uid://da6y6xifbmdpa" path="res://rich_text_label_4.gd" id="10"]
[ext_resource type="AudioStream" uid="uid://dvtte0lvio6u0" path="res://baa.wav" id="11"]
[ext_resource type="PackedScene" uid="uid://em7larvq8lrm" path="res://pause.tscn" id="12"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mckr2"]
atlas = ExtResource("5")
region = Rect2(0, 0, 200, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_cu6n2"]
atlas = ExtResource("5")
region = Rect2(200, 0, 200, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_idw84"]
atlas = ExtResource("5")
region = Rect2(400, 0, 200, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_jr3by"]
atlas = ExtResource("5")
region = Rect2(600, 0, 200, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_otqp8"]
atlas = ExtResource("5")
region = Rect2(800, 0, 200, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgna4"]
atlas = ExtResource("5")
region = Rect2(1000, 0, 200, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrw10"]
atlas = ExtResource("5")
region = Rect2(1200, 0, 200, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_swpcf"]
atlas = ExtResource("5")
region = Rect2(1400, 0, 200, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_2m4an"]
atlas = ExtResource("5")
region = Rect2(1600, 0, 200, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_5bcaq"]
atlas = ExtResource("5")
region = Rect2(1800, 0, 200, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_ig1cg"]
atlas = ExtResource("5")
region = Rect2(2000, 0, 200, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngw1e"]
atlas = ExtResource("5")
region = Rect2(2200, 0, 200, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecm48"]
atlas = ExtResource("5")
region = Rect2(2400, 0, 200, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5xjb"]
atlas = ExtResource("5")
region = Rect2(2600, 0, 200, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogd5d"]
atlas = ExtResource("5")
region = Rect2(2800, 0, 200, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxr8k"]
atlas = ExtResource("5")
region = Rect2(3000, 0, 200, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcn1b"]
atlas = ExtResource("5")
region = Rect2(3200, 0, 200, 282)

[sub_resource type="SpriteFrames" id="SpriteFrames_ib8tu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mckr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cu6n2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idw84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jr3by")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otqp8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgna4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrw10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swpcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2m4an")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5bcaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ig1cg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngw1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecm48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5xjb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogd5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxr8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcn1b")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="GDScript" id="GDScript_btye0"]
script/source = "extends Camera3D
#var amt = 0.01
#func _physics_process(delta):
	#rotate_x(amt)
	#rotate_y(amt*-1)
	#rotate_z(amt)
	#amt = amt * 1.0001
"

[sub_resource type="BoxShape3D" id="BoxShape3D_82ayb"]
size = Vector3(1, 0.42281, 1.71842)

[sub_resource type="BoxShape3D" id="BoxShape3D_03rjd"]

[node name="Node3D" type="Node3D"]

[node name="VehicleBody3D" type="VehicleBody3D" parent="."]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 4.47035e-08, 0, 5.96046e-08)
mass = 30.0
script = ExtResource("1")

[node name="Node" type="Node" parent="VehicleBody3D"]

[node name="Camera3D3" parent="VehicleBody3D/Node" instance=ExtResource("2")]
transform = Transform3D(0.474721, -0.000639931, -0.880136, -0.00219674, 0.999996, -0.00191194, 0.880134, 0.00284107, 0.474717, 0, 2.03773, 0)
current = false

[node name="freecamlisten" type="AudioListener3D" parent="VehicleBody3D/Node/Camera3D3"]

[node name="Crowd" type="AudioStreamPlayer" parent="VehicleBody3D/Node/Camera3D3/freecamlisten"]
stream = ExtResource("3")
volume_db = -0.56

[node name="Explode" type="AudioStreamPlayer3D" parent="VehicleBody3D/Node/Camera3D3/freecamlisten"]
transform = Transform3D(0.474721, -0.00219674, 0.880134, -0.000639931, 0.999996, 0.00284107, -0.880136, -0.00191194, 0.474717, 0, 0, 0)
stream = ExtResource("4")
volume_db = -11.966
pitch_scale = 1.46
max_distance = 423.72
panning_strength = 1.43
doppler_tracking = 2

[node name="explosion" type="AnimatedSprite3D" parent="VehicleBody3D/Node/Camera3D3/freecamlisten"]
transform = Transform3D(1.42416, -0.00659022, 2.6404, -0.00191979, 2.99999, 0.0085232, -2.64041, -0.00573581, 1.42415, 0.533612, -0.000719317, -0.98932)
billboard = 1
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_ib8tu")

[node name="Camera3D" type="Camera3D" parent="VehicleBody3D"]
transform = Transform3D(-1, 2.20669e-08, -1.38696e-07, -3.45601e-08, 0.918543, 0.395321, 1.36122e-07, 0.395321, -0.918543, 0, 2.55659, -2.08215)
doppler_tracking = 2
current = true
fov = 110.0
script = SubResource("GDScript_btye0")

[node name="AudioListener3D" type="AudioListener3D" parent="VehicleBody3D/Camera3D"]
current = true

[node name="sheep" parent="VehicleBody3D" instance=ExtResource("6")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.0158744, -0.521821, 0.932096)

[node name="CollisionShape3D" type="CollisionShape3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.164907, -0.111954)
shape = SubResource("BoxShape3D_82ayb")

[node name="front_left_wheel" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.674803, -0.205165, 0.747582)
use_as_traction = true
wheel_radius = 0.4
wheel_friction_slip = 100.0
suspension_stiffness = 50.0
suspension_max_force = 60000.0
damping_compression = 1.9
damping_relaxation = 2.0

[node name="back_left_wheel" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.674803, -0.205165, -0.921626)
use_as_steering = true
wheel_radius = 0.4
wheel_friction_slip = 100.0
suspension_stiffness = 50.0
suspension_max_force = 60000.0
damping_compression = 1.9
damping_relaxation = 2.0

[node name="front_right_wheel" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.733593, -0.205165, 0.747582)
use_as_traction = true
wheel_radius = 0.4
wheel_friction_slip = 100.0
suspension_stiffness = 50.0
suspension_max_force = 60000.0
damping_compression = 1.9
damping_relaxation = 2.0

[node name="back_right_wheel" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.733593, -0.205165, -0.921626)
use_as_steering = true
wheel_radius = 0.4
wheel_friction_slip = 100.0
suspension_stiffness = 50.0
suspension_max_force = 60000.0
damping_compression = 1.9
damping_relaxation = 2.0

[node name="detect_dead" type="ShapeCast3D" parent="VehicleBody3D"]
transform = Transform3D(2.31998, 0, 0, 0, 1.91584, 0, 0, 0, 4.26813, 0.137185, 7.12678, 0.818188)
shape = SubResource("BoxShape3D_03rjd")

[node name="RichTextLabel3" type="RichTextLabel" parent="VehicleBody3D/detect_dead"]
texture_filter = 4
offset_left = 4.0
offset_top = 413.0
offset_right = 216.0
offset_bottom = 439.0
scale = Vector2(6.30823, 4.38483)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("7")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "22 remain."
script = ExtResource("8")

[node name="RichTextLabel4" type="RichTextLabel" parent="VehicleBody3D/detect_dead"]
texture_filter = 4
offset_left = 4.0
offset_top = 15.0
offset_right = 247.0
offset_bottom = 46.0
scale = Vector2(2.4371, 2.50593)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("9")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "No sheep have been eliminated."
scroll_active = false
scroll_following = true
script = ExtResource("10")

[node name="RichTextLabel2" type="RichTextLabel" parent="VehicleBody3D/detect_dead"]
visible = false
texture_filter = 4
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.66
anchor_right = 1.0
anchor_bottom = 0.66
offset_left = -650.0
offset_top = -189.8
offset_right = -503.0
offset_bottom = -101.8
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.55725, 2.62599)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("9")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "

    		[color=red][tornado radius=5 freq=5]you are dead![/tornado][/color]"

[node name="RichTextLabel5" type="RichTextLabel" parent="VehicleBody3D/detect_dead"]
visible = false
texture_filter = 4
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.66
anchor_right = 1.0
anchor_bottom = 0.66
offset_left = -611.0
offset_top = -197.8
offset_right = -464.0
offset_bottom = -109.8
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.55725, 2.62599)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("9")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "

    		[color=green][tornado radius=7 freq=4]you won![/tornado][/color]
"

[node name="RichTextLabel" type="RichTextLabel" parent="VehicleBody3D/detect_dead"]
texture_filter = 4
offset_left = 5.0
offset_top = -4.0
offset_right = 251.0
offset_bottom = 22.0
scale = Vector2(2.73207, 2.05483)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("9")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "CrazyCattle3D Release 1.0"

[node name="Bleat" type="AudioStreamPlayer3D" parent="VehicleBody3D"]
stream = ExtResource("11")
volume_db = -15.909
max_db = 0.665
max_distance = 31.03
doppler_tracking = 2

[node name="PauseMenu" parent="." instance=ExtResource("12")]
